--- a/CarnetAdresse/.classpath
+++ b/CarnetAdresse/.classpath
@@ -2,7 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
-	<classpathentry kind="lib" path="E:/workspace/CarnetAdresse/lib/xstream-1.4.2/lib/xstream-1.4.2.jar"/>
-	<classpathentry kind="lib" path="E:/workspace/CarnetAdresse/lib/xstream-1.4.2/lib/xstream/kxml2-2.3.0.jar"/>
+	<classpathentry kind="lib" path="lib/xstream-1.4.2/lib/xstream-1.4.2.jar"/>
+	<classpathentry kind="lib" path="lib/xstream-1.4.2/lib/xstream/kxml2-2.3.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
